<?xml version="1.0"?>
<package format="2">
  <name>ptam</name>
  <version>0.0.1</version>
  <description>

     Modified version of the monocular SLAM framework PTAM

  </description>

  <maintainer email="markus.achtelik@mavt.ethz.ch">Markus Achtelik</maintainer>
  <maintainer email="stephan.weiss@mavt.ethz.ch">Stephan Weiss</maintainer>
  <maintainer email="simon.lynen@mavt.ethz.ch">Simon Lynen</maintainer>

  <license>see http://www.robots.ox.ac.uk/~gk/PTAM/download.html </license>

  <url>http://ros.org/wiki/ethzasl_ptam/ptam</url>
  <url type="repository">https://github.com/ethz-asl/ethzasl_ptam</url>
  <url type="bugtracker">https://github.com/ethz-asl/ethzasl_ptam/issues</url>

  <author email="markus.achtelik@mavt.ethz.ch">Markus Achtelik</author>
  <author email="stephan.weiss@mavt.ethz.ch">Stephan Weiss</author>
  <author email="simon.lynen@mavt.ethz.ch">Simon Lynen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>ptam_com</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>

  <build_depend>glut</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>

</package>
